bee-common/bee-packable/bee-packable-derive/tests/packable/fail/invalid_wrapper_type.stderr
error: The `wrapper` attribute requires a type for its value.
  --> $DIR/invalid_wrapper_type.rs:14:15
   |
14 |     #[packable(wrapper = 1)]
   |               ^^^^^^^^^^^^^
